@@ -22,6 +22,6 @@ REPBIN=$(bin_PROGRAMS)
 all-local:
 	$(INSTALL) -d ../../bin
 	$(INSTALL) $(bin_PROGRAMS) ../../bin
-	@(for f in ${REPBIN} ; do \
-	echo "Installing: ${prefix}/bin/$$f" >> ../.report.txt ; \
+	@(for file in ${REPBIN} ; do \
+	echo "Installing: ${prefix}/bin/$${file}" >> ../.report.txt ; \
 	done)
